<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_busqueda"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_busqueda" />

    <item
        android:id="@+id/navigation_favoritos"
        android:icon="@drawable/baseline_star_24"
        android:title="@string/title_favoritos" />

    <item
        android:id="@+id/navigation_configuracion"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/title_configuracion" />

</menu>