...
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/space_l"
    tools:context=".busqueda.BusquedaFragment">

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_search_field"
        android:minHeight="@dimen/touch_target_min"
        android:paddingHorizontal="@dimen/space_s"
        android:queryHint="@string/busqueda_hint" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoToArticle"
        style="@style/App.Button.Outlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:contentDescription="@string/go_to_article_action_description"
        android:minHeight="@dimen/touch_target_min"
...
