...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".favoritos.FavoritosFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favoritesControlsCard"
        style="@style/App.Card.Recurrent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/space_m"
        android:layout_marginTop="@dimen/space_s"
        app:layout_constraintEnd_toEndOf="parent"
...
