...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/space_l">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_codigos"
                style="@style/App.Card.Recurrent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/colorPrimaryContainer">

                <LinearLayout
...
